# autodoc-ai-answer

./: .dockerignore  .gitignore  CHANGELOG.md  DEPLOY.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pages_status.txt  pyproject.toml
autodoc/: __init__.py  api.py  cli.py  mcp_server.py
autodoc/core/: __init__.py  agent.py  answer_router.py  answers_io.py  edit.py  formats.py  llm.py  models.py  parse.py  worksheet.py
autodoc/core/backends/: __init__.py  docx_backend.py  pdf_backend.py  pptx_backend.py  text_backend.py  xlsx_backend.py
autodoc/web/: app.js  index.html
docs/: index.html
examples/: make_sample_quiz.py  mcp.json  sample-all-types.docx
scripts/: deploy_hf.py
tests/: conftest.py  test_agent.py  test_api.py  test_auth.py  test_autodetect.py  test_docx.py  test_e2e_live.py  test_formats.py  test_gui_playwright.py  test_mcp.py  test_optypes.py  test_smoke.py  test_worksheet.py
